# ITKBarCamp

./: NOTICE  README.md
doc/: Makefile  make.bat
doc/source/: conf.py  host.rst  index.rst
doc/source/CommunitySoftwareProcess/: Wanted.rst  index.rst
doc/source/CommunitySoftwareProcess/AddBinaryDataToAPatch/: index.rst
doc/source/CommunitySoftwareProcess/DevelopmentRepositorySetup/: index.rst
doc/source/CommunitySoftwareProcess/HowToPerformAGerritReview/: index.rst
doc/source/CommunitySoftwareProcess/PerformAGerritReview/: index.rst
doc/source/CommunitySoftwareProcess/RepositorySetup/: index.rst
doc/source/CommunitySoftwareProcess/RespondToGerritComments/: index.rst
doc/source/CommunitySoftwareProcess/StyleCheckITKWithKWStyle/: index.rst
doc/source/CommunitySoftwareProcess/SubmitAPatchToGerrit/: index.rst
doc/source/CommunitySoftwareProcess/TestAReleaseCandidate/: index.rst
doc/source/Cxx/: CommandLineArguments.rst  CommandLineUsage.rst  HelloWorld.rst  Macros.rst  Wanted.rst  index.rst
doc/source/ITK/: HelloWorld.rst  LungNoduleSegmentationWithLSTK.rst  VideoProcessingUsingOpenCVBridge.rst  Wanted.rst  WhatsNewInRelease4.2.1.rst  WhatsNewInRelease4.3.0.rst  index.rst
doc/source/ITK/ConstructITKModule/: index.rst  itk-module.cmake
doc/source/ITK/VideoProcessingUsingOpenCVBridge/: BasicVideoFiltering.cxx  CMakeLists.txt  index.rst
doc/source/ImageProcessing/: FileFormats.rst  Wanted.rst  index.rst
doc/source/SoftwareQuality/: CleanCodeTypedefs.rst  UnitTesting.rst  Wanted.rst  index.rst
utilities/: youtube-to-midas
(+7 files in other folders)
